--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = tic_tac_toe
+PRODUCT_NAME = lolxn_tic_tac_toe
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.ticTacToe
+PRODUCT_BUNDLE_IDENTIFIER = com.example.lolxnTicTacToe
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
